feature/get guns by side and by type: working fine
