# src/shared/http/routes/index.ts
@@ -11,5 +11,7 @@ route.get("/", gunController.index);
 route.get("/name/:name", gunController.GetByName);
 route.get("/id/:gunId", gunController.GetById);
 route.put("/update/:gunId", gunController.update);
+route.get("/side/:side", gunController.GetBySide);
+route.get("/type/:type", gunController.GetByType);
 
 export default route;
